--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ html, body {
   color: #bdbdbd;
 }
 
-/* contatori comuni (GLOBALI) */
+/* contatori comuni */
 #stats {
   margin-top: 12px;
   display: grid;
@@ -63,7 +63,7 @@ html, body {
 .stat-ok .stat-value { color:#00ff9c; }
 .stat-warn .stat-value { color:#ffaa00; }
 
-/* sezione farmacie (per comune selezionato) */
+/* farmacie */
 #farm-box {
   margin-top: 14px;
   padding-top: 10px;
@@ -81,28 +81,13 @@ html, body {
   margin-bottom: 6px;
 }
 
-/* legenda: comuni + strutture */
-#legend-box {
-  margin-top: 10px;
-  padding-top: 8px;
-  border-top: 1px solid #222;
-}
-#legend-box h4 {
-  margin: 6px 0 4px;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: .12em;
-  color: #cccccc;
-}
-
+/* legenda farmacie */
 .legend-row {
   display: flex;
   align-items: center;
   gap: 6px;
   font-size: 11px;
-  margin-bottom: 2px;
 }
-
 .dot {
   width: 12px;
   height: 12px;
@@ -114,31 +99,14 @@ html, body {
   border-right: 7px solid transparent;
   border-bottom: 12px solid;
 }
-.square {
-  width: 12px;
-  height: 12px;
-  border-radius: 2px;
-}
 
-/* colori stato strutture */
+/* colori stato */
 .accetta { background:#00ff9c; border-bottom-color:#00ff9c; }
 .in_trattativa { background:#4da6ff; border-bottom-color:#4da6ff; }
 .da_contattare { background:#ffaa00; border-bottom-color:#ffaa00; }
 .rifiuta { background:#ff4d4d; border-bottom-color:#ff4d4d; }
 
-/* colori legenda comuni */
-.leg-coperto { background:#00ff9c; }
-.leg-orfano { background:#ffaa00; }
-
-/* simbolo medici (usiamo quadrato diverso) */
-.med-simbolo {
-  width: 12px;
-  height: 12px;
-  border-radius: 2px;
-  border: 2px solid #ffffff;
-}
-
-/* buttons referenti */
+/* buttons */
 .hud-buttons {
   margin-top: 12px;
   display: flex;
@@ -157,7 +125,7 @@ html, body {
   color:#00110b;
 }
 
-/* pannello referenti */
+/* referenti */
 .hud-section {
   margin-top: 10px;
   border-top: 1px solid #222;
@@ -189,7 +157,6 @@ html, body {
   <div class="hud-title" id="hudTitle">Provincia di Verona</div>
   <div class="hud-sub" id="hudSub">Vista generale</div>
 
-  <!-- CONTATORI GLOBALI -->
   <div id="stats">
     <div class="stat stat-ok">
       <div class="stat-title">Comuni coperti</div>
@@ -201,70 +168,22 @@ html, body {
     </div>
   </div>
 
-  <!-- FARMACIE (COMUNE SELEZIONATO) -->
+  <!-- FARMACIE -->
   <div id="farm-box">
     <h4>Farmacie (comune selezionato)</h4>
     <div id="farm-count">0 farmacie</div>
+
+    <div class="legend-row"><span class="dot accetta"></span> Privata – accetta</div>
+    <div class="legend-row"><span class="triangle accetta"></span> Comunale – accetta</div>
+    <div class="legend-row"><span class="dot in_trattativa"></span> Privata – in trattativa</div>
+    <div class="legend-row"><span class="triangle da_contattare"></span> Comunale – da contattare</div>
   </div>
 
-  <!-- LEGENDA COMPLETA -->
-  <div id="legend-box">
-    <h4>Legenda comuni</h4>
-    <div class="legend-row">
-      <span class="square leg-coperto"></span> Comune con referenti
-    </div>
-    <div class="legend-row">
-      <span class="square leg-orfano"></span> Comune orfano
-    </div>
-
-    <h4>Legenda farmacie</h4>
-    <div class="legend-row">
-      <span class="dot accetta"></span> Privata – favorevole
-    </div>
-    <div class="legend-row">
-      <span class="dot in_trattativa"></span> Privata – in trattativa
-    </div>
-    <div class="legend-row">
-      <span class="dot da_contattare"></span> Privata – da contattare
-    </div>
-    <div class="legend-row">
-      <span class="dot rifiuta"></span> Privata – contraria
-    </div>
-    <div class="legend-row">
-      <span class="triangle accetta"></span> Comunale – favorevole
-    </div>
-    <div class="legend-row">
-      <span class="triangle in_trattativa"></span> Comunale – in trattativa
-    </div>
-    <div class="legend-row">
-      <span class="triangle da_contattare"></span> Comunale – da contattare
-    </div>
-    <div class="legend-row">
-      <span class="triangle rifiuta"></span> Comunale – contraria
-    </div>
-
-    <h4>Legenda medici / studi</h4>
-    <div class="legend-row">
-      <span class="med-simbolo accetta"></span> Medico / studio – favorevole
-    </div>
-    <div class="legend-row">
-      <span class="med-simbolo in_trattativa"></span> Medico / studio – in trattativa
-    </div>
-    <div class="legend-row">
-      <span class="med-simbolo da_contattare"></span> Medico / studio – da contattare
-    </div>
-    <div class="legend-row">
-      <span class="med-simbolo rifiuta"></span> Medico / studio – contrario
-    </div>
-  </div>
-
-  <!-- PULSANTI REFERENTI -->
   <div class="hud-buttons">
     <button class="hud-btn" id="btnAdd">Aggiungi referente</button>
     <button class="hud-btn" id="btnToggle">Vedi referenti</button>
   </div>
 
-  <!-- LISTA REFERENTI COMUNE SELEZIONATO -->
   <div class="hud-section" id="refPanel">
     <ul id="refList"></ul>
   </div>
@@ -323,10 +242,12 @@ const farmacie = [
 ];
 
 let labels = [];
-let comuni = [];
 let selectedLayer = null;
 let refVisibili = false;
 let farmLayer = L.layerGroup().addTo(map);
+
+/* mappa nome comune → layer, per aggiornare stili dopo i cambi */
+const comuneLayers = {};
 
 /* RIFERIMENTI HUD */
 const hudTitle    = document.getElementById('hudTitle');
@@ -337,27 +258,33 @@ const btnToggle   = document.getElementById('btnToggle');
 const farmCountEl = document.getElementById('farm-count');
 
 const nomeComune = p => p.nome || p.DENOM_COM || p.name || 'Comune';
-const hasRef     = n => referenti[n] && referenti[n].length > 0;
+const hasRef     = n => referenti[n] && referenti[n].length>0;
 
-/* FUNZIONI UTILITARIE */
-function aggiornaContatori(){
-  // ricalcola sempre da zero, così è coerente anche se cambiano i referenti
-  const tutti = comuni;
-  const coperti = tutti.filter(n => hasRef(n)).length;
-  const orfani  = tutti.length - coperti;
-  document.getElementById('cntOk').innerText     = coperti;
-  document.getElementById('cntOrfani').innerText = orfani;
+/* stile di base per ogni comune (non selezionato) */
+function stileBase(nome){
+  const coperto = hasRef(nome);
+  return {
+    color: coperto ? '#00ff9c' : '#ffaa00',
+    weight: coperto ? 2 : 1,
+    fillColor: coperto ? '#00ff9c' : '#000000',
+    fillOpacity: coperto ? 0.12 : 0
+  };
 }
 
+/* ri-applica lo stile base a tutti i comuni (tranne quello selezionato) */
+function aggiornaStiliComuni(){
+  Object.keys(comuneLayers).forEach(n => {
+    const layer = comuneLayers[n];
+    if(layer === selectedLayer) return;
+    layer.setStyle(stileBase(n));
+  });
+}
+
+/* reset selezione */
 function resetSelezione(){
-  if (selectedLayer){
+  if(selectedLayer){
     const prevName = nomeComune(selectedLayer.feature.properties);
-    selectedLayer.setStyle({
-      color: hasRef(prevName) ? '#00ff9c' : '#ffaa00',
-      weight: 1,
-      fillColor: hasRef(prevName) ? '#00ff9c' : '#000000',
-      fillOpacity: hasRef(prevName) ? 0.18 : 0
-    });
+    selectedLayer.setStyle(stileBase(prevName));
   }
   selectedLayer = null;
   hudTitle.innerText = 'Provincia di Verona';
@@ -367,15 +294,14 @@ function resetSelezione(){
   refPanel.style.display = 'none';
   refVisibili = false;
   btnToggle.innerText = 'Vedi referenti';
-  // quando torno alla vista generale, riabilito le label (se zoom adatto)
   aggiornaLabels();
 }
 
-/* AGGIORNA LABELS IN BASE ALLO ZOOM E SELEZIONE */
+/* LABELS in base allo zoom e alla selezione */
 function aggiornaLabels(){
   const z = map.getZoom();
   labels.forEach(l => {
-    if(!selectedLayer && z >= 9 && z <= 12){
+    if(!selectedLayer && z >= 9){
       if(!map.hasLayer(l)) map.addLayer(l);
     } else {
       if(map.hasLayer(l)) map.removeLayer(l);
@@ -391,18 +317,13 @@ fetch('data/comuni_verona.json')
     const layer = L.geoJSON(data,{
       style: f => {
         const n = nomeComune(f.properties);
-        if(!comuni.includes(n)) comuni.push(n);
-        const ref = hasRef(n);
-        return {
-          color: ref ? '#00ff9c' : '#ffaa00',
-          weight: 1,
-          fillColor: ref ? '#00ff9c' : '#000000',
-          fillOpacity: ref ? 0.18 : 0
-        };
+        return stileBase(n);
       },
       onEachFeature:(f,layer) => {
         const nome = nomeComune(f.properties);
         const center = layer.getBounds().getCenter();
+
+        comuneLayers[nome] = layer;
 
         const label = L.marker(center,{
           icon: L.divIcon({
@@ -425,8 +346,8 @@ fetch('data/comuni_verona.json')
 
     map.on('zoomend', () => {
       const z = map.getZoom();
-      // se sto uscendo molto, torno alla vista generale
-      if(selectedLayer && z < 9.5){
+      // appena fai un po' di zoom out, se eri dentro un comune, torna vista generale
+      if(selectedLayer && z <= 10.5){
         resetSelezione();
       }
       aggiornaLabels();
@@ -437,21 +358,14 @@ fetch('data/comuni_verona.json')
 function selezionaComune(layer,nome){
   if(selectedLayer){
     const prev = nomeComune(selectedLayer.feature.properties);
-    const refPrev = hasRef(prev);
-    selectedLayer.setStyle({
-      color: refPrev ? '#00ff9c' : '#ffaa00',
-      weight: 1,
-      fillColor: refPrev ? '#00ff9c' : '#000000',
-      fillOpacity: refPrev ? 0.18 : 0
-    });
+    selectedLayer.setStyle(stileBase(prev));
   }
 
   selectedLayer = layer;
   layer.setStyle({
     color:'#ffffff',
     weight:3,
-    fillColor:'#00ff9c',
-    fillOpacity:0.28
+    fillOpacity:0   // NESSUN RIEMPIMENTO QUANDO SELEZIONATO
   });
 
   map.fitBounds(layer.getBounds(),{ padding:[40,40] });
@@ -496,21 +410,13 @@ function mostraFarmacie(comune){
   });
 }
 
-/* REFERENTI: AGGIORNA CONTATORI SEMPRE DOPO CAMBIO */
-function ricalcolaStiliComuni(){
-  // dopo cambi ai referenti, potrei voler rinfrescare lo stile del comune selezionato
-  if(selectedLayer){
-    const nomeSel = nomeComune(selectedLayer.feature.properties);
-    selectedLayer.setStyle({
-      color:'#ffffff',
-      weight:3,
-      fillColor:'#00ff9c',
-      fillOpacity:0.28
-    });
-    hudSub.innerText = hasRef(nomeSel)
-      ? 'Referenti presenti: ' + referenti[nomeSel].length
-      : '⚠ Comune orfano';
-  }
+/* CONTATORI COMUNI GLOBALI */
+function aggiornaContatori(){
+  const nomi = Object.keys(comuneLayers);
+  const ok   = nomi.filter(n => hasRef(n)).length;
+  const orfani = nomi.length - ok;
+  document.getElementById('cntOk').innerText      = ok;
+  document.getElementById('cntOrfani').innerText  = orfani;
 }
 
 /* REFERENTI: AGGIUNGI */
@@ -525,8 +431,10 @@ document.getElementById('btnAdd').onclick = () => {
   if(!referenti[nomeComuneSel]) referenti[nomeComuneSel] = [];
   referenti[nomeComuneSel].push(n);
 
-  aggiornaContatori();
-  ricalcolaStiliComuni();
+  hudSub.innerText = 'Referenti presenti: ' + referenti[nomeComuneSel].length;
+
+  aggiornaStiliComuni();   // aggiorna colori (arancio⇄verde)
+  aggiornaContatori();     // aggiorna contatori globali
 
   if(refVisibili) mostraReferenti(nomeComuneSel);
 };
